Add check out view

--- a/Front-End/app/views/inc/top_nav.html
+++ b/Front-End/app/views/inc/top_nav.html
@@ -32,6 +32,7 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerHome/AllService">All Services</a></li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerService/AddToCart">Add To Cart</a></li>
+        <li class="nav-item"><a class="nav-link" href="#!CustomerService/Cart"> Cart</a></li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerHome/MyOrder">My Order</a></li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerHome/MyProfile">My Profile</a></li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerService/Search">Search</a></li>
