--- a/Front-End/app/views/pages/Service/Services.html
+++ b/Front-End/app/views/pages/Service/Services.html
@@ -17,7 +17,7 @@
             <td>{{s.price}}</td>
             <td>{{s.status}}</td>
             <td>{{s.type}}</td>
-            <td> <a href="#!CustomerService/Cart/{{s.id}}" class="btn btn-info">Add To Cart</a></td>
+            <td> <a href="#!CustomerService/AddCart/{{s.id}}" class="btn btn-info">Add To Cart</a></td>
         </tr>
       </table>
   </div>
