--- a/Front-End/app/views/pages/Service/DeleteCart.html
+++ b/Front-End/app/views/pages/Service/DeleteCart.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <h2>Cart</h2>
 
       <table class="table table-bordered ">
@@ -17,4 +17,4 @@
             <td>{{c.type}}</td>
         </tr>
       </table>
-  </div>
+</div> -->
