--- a/Front-End/app/views/pages/Service/ServiceCart.html
+++ b/Front-End/app/views/pages/Service/ServiceCart.html
@@ -1,4 +1,4 @@
-<!-- <br>
+<br>
 <a href="#!CustomerService/AddToCart" class="btn btn-warning ml-2">Back</a>
 </br>
 <div>
@@ -23,4 +23,10 @@
             <td> <a href="#!CustomerService/CartDelete/{{c.id}}" class="btn btn-info">Delete</a></td>
         </tr>
       </table>
-  </div> -->
+      <form ng-submit="submit()">
+        <label>Delivary Address: </label>
+        <input type="text" name="delevery_address" placeholder="Enter Address"  ng-model="delevery_address" required="required"/>
+        <br />
+        <input type="submit" name="submit" value="Checkout" class="btn btn-danger ml-2" />
+    </form>
+  </div>
