Add comment done

--- a/Front-End/app/views/pages/Service/ServiceCart.html
+++ b/Front-End/app/views/pages/Service/ServiceCart.html
@@ -20,7 +20,7 @@
             <td>{{c.price}}</td>
             <td>{{c.status}}</td>
             <td>{{c.type}}</td>
-            <td> <a href="#!CustomerService/CartDelete/{{c.id}}" class="btn btn-info">Delete</a></td>
+            <td> <a href="#!CustomerService/CartDelete/{{c.id}}" class="btn btn-danger">Delete</a></td>
         </tr>
       </table>
       <form ng-submit="submit()">
