--- a/Front-End/app/views/pages/Service/Services.html
+++ b/Front-End/app/views/pages/Service/Services.html
@@ -1,5 +1,8 @@
 <div>
     <h2>All Services Information</h2>
+     <form  class="form-inline my-2 my-lg-0">
+      <h3>Service Search:</h3> <input class="form-control mr-sm-2" type="search" ng-model="type" placeholder="Service Search" aria-label="Search">
+    </form> 
 
       <table class="table table-bordered ">
         <tr class="table-info">
@@ -11,7 +14,7 @@
           <th>Action</th>
           
         </tr>
-        <tr ng-repeat="s in services">
+        <tr ng-repeat="s in services|filter:type">
             <td>{{s.name}}</td>
             <td>{{s.details}}</td>
             <td>{{s.price}}</td>
