--- a/Front-End/app/views/pages/Service/ServiceDetails.html
+++ b/Front-End/app/views/pages/Service/ServiceDetails.html
@@ -23,5 +23,12 @@
         <h5><b>User Name: {{comment.User.name}}</b></h5>
         <li>{{comment.comment1}}</li>
       </ul>
+
+      <form ng-submit="submit()">
+        
+        <input type="text" name="comment1" placeholder="Enter Comment"  ng-model="comment1"/>
+
+        <input type="submit" name="submit" value="Procced" class="btn btn-primary ml-1" />
+      </form>
      
   </div>
