Add login page and authentication

--- a/Front-End/app/views/pages/Customer/CustomerHome.html
+++ b/Front-End/app/views/pages/Customer/CustomerHome.html
@@ -1,3 +1,4 @@
+<div ng-include="'views/inc/top_nav.html'"></div>
 <h3><b>A Complete Overview of Our AC Repair Services</b></h3>
 <h4><b>What you expect from us</b></h4>
 <ul>
