--- a/Front-End/app/views/pages/Customer/MyProfile.html
+++ b/Front-End/app/views/pages/Customer/MyProfile.html
@@ -1,3 +1,4 @@
+<div ng-include="'views/inc/top_nav.html'"></div>
 <br>
 <a href="#!CustomerHome/EditProfile/{{p.id}}" class="btn btn-danger ml-3">Edit Profile</a>
 </br></br>
