--- a/Front-End/app/views/pages/Service/ServiceCart.html
+++ b/Front-End/app/views/pages/Service/ServiceCart.html
@@ -1,5 +1,6 @@
+<div ng-include="'views/inc/top_nav.html'"></div>
 <br>
-<a href="#!CustomerService/AddToCart" class="btn btn-warning ml-2">Back</a>
+<a href="#!CustomerService/AddToCart" class="btn btn-warning ml-2">Add More</a>
 </br>
 <div>
     <h2>Cart</h2>
