--- a/Front-End/app/views/pages/Service/Services.html
+++ b/Front-End/app/views/pages/Service/Services.html
@@ -1,3 +1,4 @@
+<div ng-include="'views/inc/top_nav.html'"></div>
 <div>
     <h2>All Services Information</h2>
      <form  class="form-inline my-2 my-lg-0">
