--- a/Front-End/app/views/inc/top_nav.html
+++ b/Front-End/app/views/inc/top_nav.html
@@ -36,6 +36,7 @@
         <li class="nav-item"><a class="nav-link" href="#!CustomerHome/MyOrder">My Order</a></li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerHome/MyProfile">My Profile</a></li>
         <li class="nav-item"><a class="nav-link" href="#!CustomerService/Search">Search</a></li>
+        <li class="nav-item"><a class="nav-link" href="#!logout">Logout</a></li>
         
       </ul>
     </div>
