--- a/Front-End/app/views/pages/Customer/MyOrderDetails.html
+++ b/Front-End/app/views/pages/Customer/MyOrderDetails.html
@@ -1,3 +1,4 @@
+<div ng-include="'views/inc/top_nav.html'"></div>
 <div>
     <h3><b>Status :{{o.status}}</b></h3>
     <h3><b>Delivary Address:{{o.delevery_address}}</b></h3>
