--- a/Front-End/app/views/pages/Service/Search.html
+++ b/Front-End/app/views/pages/Service/Search.html
@@ -1,3 +1,4 @@
+<div ng-include="'views/inc/top_nav.html'"></div>
 <br><br>
 <form ng-submit="submit()" class="form-inline my-2 my-lg-0">
 <input class="form-control mr-sm-2" type="search" ng-model="type" placeholder="Search" aria-label="Search">
