Clear cart added

--- a/Front-End/app/views/pages/Service/ServiceCart.html
+++ b/Front-End/app/views/pages/Service/ServiceCart.html
@@ -1,6 +1,7 @@
 <div ng-include="'views/inc/top_nav.html'"></div>
 <br>
 <a href="#!CustomerService/AddToCart" class="btn btn-warning ml-2">Add More</a>
+<a href="#!CustomerService/ClearCart" class="btn btn-danger ml-2">Clear Cart</a>
 </br>
 <div>
     <h2>Cart</h2>
