Add font awasome icon

--- a/Front-End/app/views/pages/Customer/EditProfile.html
+++ b/Front-End/app/views/pages/Customer/EditProfile.html
@@ -1,5 +1,6 @@
 <div ng-include="'views/inc/top_nav.html'"></div>
-<h2 class="text-center">Edit Profile Information</h2>
+<br>
+<h2 class="text-center text-dark"><i class="fas fa-user-edit"></i> Edit Profile Information</h2>
 <br>
 <center>
     <form  ng-submit="submit()">
