--- a/Front-End/app/views/pages/Customer/MyOrders.html
+++ b/Front-End/app/views/pages/Customer/MyOrders.html
@@ -1,9 +1,10 @@
 <div ng-include="'views/inc/top_nav.html'"></div>
 <div>
-    <h1>My Order List</h1>
+    <h2 class="text-dark text-center"><i class="fas fa-list"></i> My Order List</h2>
+    <br>
 
       <table class="table table-bordered table-striped">
-        <tr class="table-secondary">
+        <tr class="table-success">
           <th>Order Id</th>
           <th>Order Place Date</th>
           <th>Order Status</th>
