--- a/Front-End/app/views/pages/Customer/MyProfile.html
+++ b/Front-End/app/views/pages/Customer/MyProfile.html
@@ -4,7 +4,7 @@
 </br></br>
 
 <center>
-    <h2>My Profile Information</h2>
+    <h2 class="text-dark"> <i class="fas fa-user"></i> My Profile Information</h2>
     <br>
     <table class="table w-50">
         <tr class="table-primary">
