--- a/Front-End/app/views/pages/Service/AllService.html
+++ b/Front-End/app/views/pages/Service/AllService.html
@@ -1,6 +1,7 @@
 <div ng-include="'views/inc/top_nav.html'"></div>
 <div>
-    <h2>All Services</h2>
+    <h2 class="text-dark text-center"><i class="fab fa-servicestack"></i> All Services</h2>
+    <br>
      <form  class="form-inline my-2 my-lg-0">
       <h3>Service Search:</h3> <input class="form-control mr-sm-2" type="search" ng-model="type" placeholder="Service Search" aria-label="Search">
     </form> 
