--- a/Front-End/app/views/pages/Service/Search.html
+++ b/Front-End/app/views/pages/Service/Search.html
@@ -1,7 +1,8 @@
 <div ng-include="'views/inc/top_nav.html'"></div>
-<br><br>
+<br>
+<h2 class="text-dark text-center"><i class="fas fa-search"></i> Service Search</h2>
 <form ng-submit="submit()" class="form-inline my-2 my-lg-0">
-<input class="form-control mr-sm-2" type="search" ng-model="type" placeholder="Search" aria-label="Search">
+<input class="form-control mr-sm-2" type="search" ng-model="type" placeholder="Enter Service Type" aria-label="Search">
 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 </form>
 
