--- a/Front-End/app/views/pages/Service/ServiceCart.html
+++ b/Front-End/app/views/pages/Service/ServiceCart.html
@@ -4,7 +4,7 @@
 <a href="#!CustomerService/ClearCart" class="btn btn-danger ml-2">Clear Cart</a>
 </br>
 <div>
-    <h2>Cart</h2>
+    <h2 class="text-dark text-center"><i class="fas fa-shopping-cart"></i> Cart</h2>
 
       <table class="table table-bordered ">
         <tr class="table-info">
