--- a/Front-End/app/views/pages/Service/Services.html
+++ b/Front-End/app/views/pages/Service/Services.html
@@ -1,10 +1,11 @@
 <div ng-include="'views/inc/top_nav.html'"></div>
+<br>
 <div>
-    <h2>All Services Information</h2>
+    <h2 class="text-dark text-center"><i class="fas fa-cart-plus"></i> Add To Cart</h2>
      <form  class="form-inline my-2 my-lg-0">
       <h3>Service Search:</h3> <input class="form-control mr-sm-2" type="search" ng-model="type" placeholder="Service Search" aria-label="Search">
     </form> 
-
+    <br>
       <table class="table table-bordered ">
         <tr class="table-info">
           <th>Name</th>
