--- a/Front-End/app/views/pages/Customer/CustomerLogin.html
+++ b/Front-End/app/views/pages/Customer/CustomerLogin.html
@@ -49,7 +49,7 @@
 
                 <label class="pull-left checkbox-inline"><input type="checkbox"> Remember me</label>
                 <a href="#" class="pull-right">Forgot Password?</a>
-                <span class="pull-right text-danger"></span>
+                <span class="pull-right text-danger">{{invalid}}</span>
             </div>
           
         </form>
